# django-blog-dd

./: .gitignore  README.md  requirements.txt
dandamblog/: manage.py  pyproject.toml
dandamblog/blog/: admin.py  models.py  urls.py  views.py
dandamblog/blog/migrations/: 0001_initial.py  0002_post_is_featured.py  0003_post_featured_image.py  0004_category.py  0005_post_category.py  0006_alter_category_description.py  0007_alter_post_category.py
dandamblog/dandamblog/: asgi.py  settings.py  urls.py  wsgi.py
dandamblog/templates/: archive.html  base.html  category.html  index.html  post_detail.html  sidebar.html  tagpage.html
dandamblog/templates/flatpages/: default.html  quack.html
